--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+body {
+    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    background-color: #0f172a; /* тёмно-синий */
+    color: white;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    margin-top: 120px;
+}
+
+h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 20px;
+    opacity: 0.8;
+}
+
 .btn {
     display: inline-block;
     margin-top: 30px;
