--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
     background: linear-gradient(135deg, #3b82f6, #9333ea);
     color: white;
+    text-shadow: 0 0 2px rgba(255,255,255,0.8),
+                 0 0 6px rgba(0,0,0,0.7);
 }
 
 .page {
@@ -33,13 +35,18 @@ body {
 .header h1 {
     font-size: 42px;
     margin: 0 0 10px 0;
+    text-shadow: 0 0 2px rgba(255,255,255,0.8),
+                 0 0 6px rgba(0,0,0,0.7);
 }
 
 .header p {
     margin: 0 0 25px 0;
     font-size: 18px;
     opacity: 0.9;
+    text-shadow: 0 0 2px rgba(255,255,255,0.8),
+                 0 0 6px rgba(0,0,0,0.7);
 }
+
 
 /* Кнопка */
 .btn {
@@ -77,7 +84,12 @@ body {
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+
+    color: white; /* важная строка */
+    text-shadow: 0 0 2px rgba(255,255,255,0.8),
+                 0 0 6px rgba(0,0,0,0.7); /* обводка */
 }
+
 
 .card h2 {
     margin-top: 0;
@@ -90,6 +102,7 @@ body {
     font-size: 16px;
     opacity: 0.9;
 }
+
 
 .skills {
     display: flex;
